# cookiecutter-poetry

./: .bumpversion.cfg  .dccache  .editorconfig  .gitignore  CONTRIBUTING.rst  LICENSE  README.rst  appveyor.yml  cookiecutter.json  cookiecutter_poetry.py  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: pull_request.yml  pythonpackage.yml  test.yml
docs/: conf.py  console_script_setup.rst  index.rst  prompts.rst  pypi_release_checklist.rst  travis_pypi_setup.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_bake_project.py  test_docs.py  utils.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  LICENSE  README.md  README.rst  fabfile.py  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  make.bat
{{cookiecutter.project_slug}}/misc/: uvicorn-logging.yaml
{{cookiecutter.project_slug}}/misc/templates/: stack.yaml.jinja
{{cookiecutter.project_slug}}/src/: conftest.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  cli.py  config.py  rest.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/api/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/api/v1/: __init__.py  routes.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}.py  test_{{cookiecutter.project_slug}}.py  tests.http
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
