[tool.poetry]
name = "cookiecutter-poetry"
version = "0.1.0"
description = "Cookiecutter template for a Python package with Poetry."
authors = ["Joseph Piron <joseph.piron@gmail.com>"]
readme = "README.rst"
keywords = ["cookiecutter", "poetry", "template", "package"]
repository = "https://github.com/johanvergeer/cookiecutter-poetry"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/johanvergeer/cookiecutter-poetry/issues"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "*"

[tool.poetry.dev-dependencies]
black = "*"
bump2version = "*"
isort = "*"

[tool.black]
exclude = "{{cookiecutter.project_slug}}"

[tool.isort]
skip = "{{cookiecutter.project_slug}}"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
