[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [""{{ cookiecutter.full_name.replace("\"", "\\\"") }}" <{{ cookiecutter.email }}>"]
license = "BSD-3-Clause"
readme = "README.rst"
keywords = ["{{ cookiecutter.project_slug }}"]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

{%- set license_classifiers = {
    "MIT license": "License :: OSI Approved :: MIT License",
    "BSD license": "License :: OSI Approved :: BSD License",
    "ISC license": "License :: OSI Approved :: ISC License (ISCL)",
    "Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
    "GNU General Public License v3": "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
} %}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
{%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/johanvergeer/cookiecutter-poetry/issues"
"Documentation" = "https://docs.getpelican.com/"
"Source" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
"Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pip = "^19.2.3"
bump2version = "^0.5.11"
wheel = "^0.33.6"
watchdog = "^0.9.0"
flake8 = "^3.7.8"
tox = "^3.14.0"
coverage = "^4.5.4"
Sphinx = "^1.8.5"
twine = "^1.14.0"
{% if cookiecutter.command_line_interface|lower == 'click' -%}
Click = "^7.0"{% endif %}
{% if cookiecutter.use_pytest == 'y' -%}
pytest = "^4.6.5"
pytest-runner = "^5.1"{% endif %}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[tool.poetry.plugins."console_scripts"]
"{{ cookiecutter.project_slug }}" = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}
