[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace("\"", "\\\"") }} <{{ cookiecutter.email }}>"]
{%- set license_classifiers = {
    "MIT license": "MIT",
    "Apache Software License 2.0": "Apache-2.0",
    "GNU General Public License v3.0": "GPL-3.0-only",
    "GNU General Public License v2.0": "GPL-2.0-only",
    "BSD 3-Clause 'New' or 'Revised' License": "BSD-3-Clause",
    "GNU Lesser General Public License v2.1": "LGPL-2.1-only",
    "BSD 2-Clause 'Simplified' License": "BSD-2-Clause",
} %}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = "{{ license_classifiers[cookiecutter.open_source_license] }}"
{%- endif %}
readme = "README.rst"
keywords = ["{{ cookiecutter.project_slug }}"]
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/johanvergeer/cookiecutter-poetry/issues"
"Documentation" = "https://docs.getpelican.com/"
"Source" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
"Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pip = "^19.2.3"
bump2version = "^0.5.11"
wheel = "^0.33.6"
watchdog = "^0.9.0"
flake8 = "^3.7.8"
tox = "^3.14.0"
coverage = "^4.5.4"
{% if cookiecutter.create_docs == "y" %}
Sphinx = "^1.8.5"{% endif %}
{% if cookiecutter.command_line_interface|lower == 'click' -%}
Click = "^7.0"{% endif %}
pytest = "^4.6.5"
pytest-runner = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[tool.poetry.plugins."console_scripts"]
"{{ cookiecutter.project_slug }}" = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}
